# PhotoShare

./: .gitignore  LICENSE  README.md  alembic.ini  example.env  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3030995a4ca8_fix_default.py  d0488da942da_add_permissions_table.py  d06b764d0ccc_qrcode_migration_second.py  d353c9a9e03a_create_ratings_table.py  dcb5e976290e_create_comments_table.py  dcbfb57f083b_fix_last_migrations_in_images.py
src/: config.py
src/access/: service.py
src/auth/: repository.py  routes.py  schemas.py  service.py
src/auth/utils/: access.py  email.py  send_post.py
src/comment/: repository.py  routes.py  schemas.py
src/database/cache/: redis_conn.py  redis_connector.py
src/database/sql/: alchemy_models.py  default_records.py  models.py  postgres_conn.py  postgres_connector.py
src/image/: repository.py  routes.py  schemas.py
src/image/utils/: cloudinary_service.py  cloudinary_servise.py  generate_transform_routes.py
src/rating/: repository.py  routes.py
src/tag/: repository.py  routes.py  schemas.py
templates/: email_verification.html  reset_password.html
